--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOCUMENTO</title>
+     <style>
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        main {
+            background-color: white;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 2px solid darkblue;
+            border-radius: 15px;
+        }
+     </style>
 </head>
 <body>
-  
+   <main>
+    <h1>Teste de Imagem de Fundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, reiciendis magni doloribus, dolores magnam adipisci, officia recusandae molestias consequuntur nobis velit maxime ex obcaecati maiores ipsa consequatur asperiores architecto tempora! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nostrum placeat vero explicabo dolore sint eos exercitationem minus. Saepe odio architecto cum, facere quo reprehenderit nesciunt! Quasi suscipit dolorem fugiat. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt maxime eos laboriosam, consectetur error consequuntur porro voluptas reiciendis quos doloribus dignissimos nulla optio pariatur ipsam ipsum voluptatum ducimus a magnam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sit animi nihil fuga, enim veniam vel obcaecati quaerat odit explicabo illum sed eligendi velit vitae? Labore sunt natus totam.</p>
+   </main>
 </body>
 </html>
