--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -25,7 +25,7 @@
             left: 50%;
             top: 50%;
 
-            transform: translate(20px, 20px);
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
